--- a/views/landing.erb
+++ b/views/landing.erb
@@ -11,7 +11,7 @@
             <input type="text" id="num" name="user_password"/> 
             <label for="mail">Correo electrónico:</label>
             <input type="email" id="mail" name="user_email" />
-          <input type="button" value="Buscar" onclick="usrpas()">
+          <input type='submit' value='Start'>
       </form>
     </body>  
 
