Modifications in views careers and landing.  Creation of views questions.

--- a/views/careers_index.erb
+++ b/views/careers_index.erb
@@ -1,20 +1,30 @@
-<body background="https://www.aauniv.com/s/blog/wp-content/uploads/2020/04/estudiar-online-en-casa-para-universitarios.jpg">
+<html>
+  <style>
+    img{
+      width: 100%;
+    }
+    body {
+      background: url(https://www.crushpixel.com/big-static14/preview4/man-college-student-studying-learning-1749365.jpg); 
+      background-size: cover;
+      background-repeat: no-repeat;
+      margin: 0;
+      height: 100vh;
+    }
+  </style>
 
-<h1>LAS CARRERAS SON:</h1>
-
-<form action='/careers' method='POST'>
-
-	<input type='text' name='name' placeholder= 'Nombre de carrera'>
-	<input type='submit' value='Crear'>
-
-</form>
-<ul>
-
-	<% @careers.map do |career| %>
-		<li>
-	<a href="careers/<%=career.id%>"> <%= career.name %></a>
-			(<%= career.surveys.count.to_s %>)
+  <h1>---CARRERAS---</h1>
+  <div> <p> Si usted desea cargar una carrera lo podrá hacer a continuación: </p> </div>
+  <form action='/careers' method='POST'>
+    <input type='text' name='name' placeholder= 'Nombre de carrera'>
+	  <input type='submit' value='Crear'>
+  </form>
+  <div> <p> LAS CARRERAS SON LAS SIGUIENTES: </p> </div>
+  <ul>
+	 <% @careers.map do |career| %>
+	   <li>
+	       <a href="careers/<%=career.id%>"> <%= career.name %></a>
+			   (<%= career.surveys.count.to_s %>)
 		</li>
 	<% end %>
-
-</ul> 
+  </ul> 
+</html>
