--- a/views/landing.erb
+++ b/views/landing.erb
@@ -1,28 +1,19 @@
+<!DOCTYPE html>
+
 <html>
-  <body>
-    <style>
-    img{
-      width: 100%;
-    }
-    body {
-      background: url(https://www.gub.uy/ministerio-educacion-cultura/sites/ministerio-educacion-cultura/files/imagenes/noticias/Dise%C3%B1o%20sin%20t%C3%ADtulo_4.png)  ; 
-      background-size: cover;
-      background-repeat: no-repeat;
-      margin: 0;
-      height: 100vh;
-    }
-    </style>
-    <h1>-----------------------------¡HOLA, BIENVENIDO A TESTVOCACIONAL-21!-----------------------</h1>
-    <div> <p>La realización de un test vocacional pretende ayudar a la persona a conocer su orientación profesional y saber de primera mano cuáles son los trabajos en los que podría destacar. </p> </div>
-      <form action='/surveys' method='POST'>
-        <div> <p> Ingrese sus datos: </p> </div>
-            <label for="name">Usuario:</label>
-            <input type="text" id="name" name="user_name"/>
-            <label for="num">Contraseña:</label>
-            <input type="text" id="num" name="user_password"/> 
-            <label for="mail">Correo electrónico:</label>
-            <input type="email" id="mail" name="user_email" />
-            <input type='submit' value='Start'>
-      </form>
-    </body>  
+   		<h1>-----------------------------¡HOLA, BIENVENIDO A TESTVOCACIONAL-21!-----------------------</h1>
+        <p>TestVocational-21 es una plataforma gratuita que te ayuda a decidir tu futuro con información actualizada sobre carreras. Estamos aquí para ayudarte a encontrar la mejor carrera!. Para comenzar, te haremos una serie de preguntas. Estas preguntas estan diseñadas para ayudarnos a encontrar las carreras que mas se adaptan a ti en función de tus intereses. No hay respuestas incorrectas, solo aprenderemos sobre tus gustos..</p>
+    	<div style="text-align: center">
+    		<form action='/inicio' method='POST'>
+    			<input type='submit' value='¡COMENZAR TEST!'>
+    		</form>
+    	</div>
+    	<form action='/info_careers' method='POST'>
+   		</br>
+    		<input type='submit' value='Carreras disponibles en este test'>
+     	</form>
+        <form action='/info_surveys' method='POST'>
+        </br>
+            <input type='submit' value='Información de usuarios que han usado este servicio'>
+        </form>
 </html>
