--- a/views/questions_index.erb
+++ b/views/questions_index.erb
@@ -1,46 +1,23 @@
+<!DOCTYPE html>
 <html>
-    <style>
-        img{
-        width: 100%;
-        }
-        body {
-            background: url(https://legaintegra.es/wp-content/uploads/2019/07/como-estudiar.jpg)  ; 
-            background-size: cover;
-            background-repeat: repeat;
-            margin: 0;
-            height: 100vh;
-        }
-    </style>
-        <h1>---PREGUNTAS---</h1>
-            <div> <p> Si usted desea cargar una pregunta lo podrá hacer a continuación: </p>    </div>
-            <form action='/questions' method='POST'>
-                <li><input type='text' name='question[name]' placeholder= 'Pregunta'>
-                <li><input type='text' name='question[description]' placeholder= 'Descripcion'>
-                <li><input type='number' name='question[number]' placeholder= 'Nro de pregunta' min="1">
-                <li><input type='text' name='question[type]' placeholder= 'Tipo'>   
-                <li><input type='submit' value='Crear'>
-            </form>
-        <div> <p> LAS PREGUNTAS SON LAS SIGUIENTES: </p> </div>
-        <ul>
-        <% @questions.map do |question| %>
-        <li>
-            <a href="questions/<%=question.id%>"> <%= question.name %></a>
-        </li>
-        <% end %>
-        </ul>
-            <div class="col-md-12">
-                <% @questions.each do |question| %>
-                <p ><%= question.number %>. <%= question.description %></p>
-                <% question.choices.each do |choice| %>
-                <div class="col-md-12">
-                    <label class="radio">                       
-                        <input type="radio" name="<%= question.id  %>" id="<%= choice.id  %>" /> <%= choice.text %> 
-                    </label>
-                </div>
-              <% end %>
-            <% end %>
-            </div>
-        <input type='submit' value='Enviar respuestas'>
+    <h1>--------------------------------------------VOCATIONALTEST-21-------------------------------------------</h1>
+        <form action='/responses' method='POST'>
+            <input type='hidden' name='survey_id' value='<%=@survey.id%>'>
+            <ul>
+                <%@questions.each do |question|%>
+                    <li><%=question.description %></li>
+                    <td>
+                        <%question.choices.each do |choice|%>
+                            <input type='radio' name='<%=question.id%>' value='<%=choice.id%>' required> <%=choice.text%> 
+                            <br/>
+                        <%end%>
+                        <input type='hidden' name='question_id[]' value='<%=question.id%>'>
+                    </td>   
+                <%end%>
+            </ul>
+            <p id = "aviso">
+                    <b> -.Por favor,te recomendamos que revises bien las respuestas antes de enviarlas.-</b>
+            </p>
+            <input type='submit' value = 'Enviar'>
+        </form>
 </html>
-
-
