Add information about the races and link.

--- a/views/end_fail_index.erb
+++ b/views/end_fail_index.erb
@@ -2,7 +2,7 @@
 <html>
      <h1>------------------------------------------------TESTVOCACIONAL-21-----------------------------------</h1>
         <td>
-            <label>¡¡UNA LASTIMA <%=@user%> !! NO NOS PROPORCIONASTE DEMASIADA INFORMACION :( ) </label>
+            <label>¡¡UNA LASTIMA <%=@user%> !! NO NOS PROPORCIONASTE DEMASIADA INFORMACION :(</label>
         </td>
         
    		<form action='/inicio' method='POST'>
