--- a/views/end_index.erb
+++ b/views/end_index.erb
@@ -2,7 +2,7 @@
 <html>
         <h1>----------------------------------------------------TESTVOCACIONAL-21-----------------------------------</h1>
         <td>
-            <label> MUY BIEN!!<%=@user%> TE RECOMENDAMOS: <%=@career%> </label>
+            <label> MUY BIEN <%=@user%> !! TE RECOMENDAMOS: <%=@career%> </label>
         </td>
         <form action='/inicio' method='POST'>
    			<br/>
