--- a/views/end_index.erb
+++ b/views/end_index.erb
@@ -1,15 +1,32 @@
 <!DOCTYPE html>
 <html>
-        <h1>----------------------------------------------------TESTVOCACIONAL-21-----------------------------------</h1>
-        <td>
-            <label> MUY BIEN <%=@user%> !! TE RECOMENDAMOS: <%=@career%> </label>
-        </td>
-        <form action='/inicio' method='POST'>
-   			<br/>
-    		    <input type='submit' value='Realizar otro test'>
-        </form>
-		    <form action='/init' method='POST'>
-  			</br>
-    		    <input type='submit' value='Inicio'>
-   		  </form>
+    <head>
+        <link rel='stylesheet' href='/styles.css' type='text/css'/>
+    </head>
+
+    <body class='background2'>
+
+        <h1>TESTVOCACIONAL-21</h1>
+            <h2> MUY BIEN!! <%=@user%> TE RECOMENDAMOS: <%=@career%> </h2>
+        
+        <div class='result-img'>
+            <img src="../img/<%=@career%>.jpg"/>
+        </div>
+
+        <div class='btn'>
+          <form action='/inicio' method='POST'>
+            <br/>
+            <input type='submit' value='Realizar otro test'>
+          </form>
+        </div>
+
+        <div class='btn'>
+          <form action='/init' method='POST'>
+          </br>
+            <input type='submit' value='Inicio'>
+          </form>
+        </div>
+
+    </body>
+
 </html>
