--- a/views/landing.erb
+++ b/views/landing.erb
@@ -1,19 +1,33 @@
 <!DOCTYPE html>
 
 <html>
-   		<h1>-----------------------------¡HOLA, BIENVENIDO A TESTVOCACIONAL-21!-----------------------</h1>
-        <p>TestVocational-21 es una plataforma gratuita que te ayuda a decidir tu futuro con información actualizada sobre carreras. Estamos aquí para ayudarte a encontrar la mejor carrera!. Para comenzar, te haremos una serie de preguntas. Estas preguntas estan diseñadas para ayudarnos a encontrar las carreras que mas se adaptan a ti en función de tus intereses. No hay respuestas incorrectas, solo aprenderemos sobre tus gustos..</p>
-    	<div style="text-align: center">
-    		<form action='/inicio' method='POST'>
-    			<input type='submit' value='¡COMENZAR TEST!'>
-    		</form>
-    	</div>
-    	<form action='/info_careers' method='POST'>
-   		</br>
-    		<input type='submit' value='Carreras disponibles en este test'>
-     	</form>
-        <form action='/info_surveys' method='POST'>
-        </br>
-            <input type='submit' value='Información de usuarios que han usado este servicio'>
-        </form>
+	<head>
+		<link rel='stylesheet' href='/styles.css' type='text/css'/>
+	</head>
+
+	<body>
+   		<h1>¡HOLA, BIENVENIDO A TESTVOCACIONAL-21!</h1>
+        	<h2>TestVocational-21 es una plataforma gratuita que te ayuda a decidir tu futuro con información actualizada sobre carreras. Estamos aquí para ayudarte a encontrar la mejor carrera!. Para comenzar, te haremos una serie de preguntas. Estas preguntas estan diseñadas para ayudarnos a encontrar las carreras que mas se adaptan a ti en función de tus intereses. No hay respuestas incorrectas, solo aprenderemos sobre tus gustos..</h2>
+    	
+    	<div class='landing'>	
+				<div class='btn'>
+    				<form action='/inicio' method='POST'>
+    					<input type='submit' value='¡COMENZAR TEST!'>
+    				</form>
+    			</div>
+    			
+				<div class='btn'>
+					<form action='/info_careers' method='POST'>
+						<input type='submit' value='Carreras disponibles en este test'>
+     				</form>
+				</div>
+
+				<div class='btn'>
+        			<form action='/info_surveys' method='POST'>
+            			<input type='submit' value='Información de usuarios que han usado este servicio'>
+       			 	</form>
+				</div>
+			</div>
+    </body>
+
 </html>
