--- a/views/info_careers.erb
+++ b/views/info_careers.erb
@@ -219,7 +219,7 @@
                 </br>
                 <p>DURACIÓN: 5 años aprox.<p>
                 </br>
-                <a href=" " target="_blank">Click aqui para mas información sobre Periodismo </a>
+                <a href="https://fcc.unc.edu.ar/fcc-carreras/licenciatura" target="_blank">Click aqui para mas información sobre Periodismo </a>
             </div>
 
         <%when 15%>
