--- a/views/landing.erb
+++ b/views/landing.erb
@@ -23,8 +23,8 @@
 				</div>
 
 				<div class='btn'>
-        			<form action='/careers_info_surveys' method='POST'>
-            			<input type='submit' value='Buscar información de una carrera en particular'
+        			<form action='/careers_info_survey' method='POST'>
+            			<input type='submit' value='Buscar información de una carrera en particular'>
        			 	</form>
 				</div>
 
