[finishes #179965196] Bug fix

--- a/views/quantity_careers.erb
+++ b/views/quantity_careers.erb
@@ -12,5 +12,11 @@
     <body>
         La cantidad de encuestas que dieron como resultado la carrera <%=@career.name%> entre <%=@fecha_ini%> y <%=@fecha_fin%> fueron <%=@count%> 
     </body>
+    <div class='btn'>
+          <form action='/init' method='POST'>
+          </br>
+            <input type='submit' value='Inicio'>
+          </form>
+    </div>
 
 </html>
