Remove method get /careers and update view careers_index.

--- a/views/careers_index.erb
+++ b/views/careers_index.erb
@@ -11,7 +11,7 @@
         <div>
           <ul>
             <div class='list-careers'>
-	            <% @careers.map do |career| %>
+	            <% Career.all.map do |career| %>
 	              <li>
 	                <a href="careers/<%=career.id%>"> <%= career.name %> (<%= career.surveys.count.to_s %>)</a>
                 </li>
